--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,17 +1,22 @@
-<h2>Sign up</h2>
+<div class="page-wrapper">
+  <h1>Sign up</h1>
+  <br>
+  <div class="brand-form">
+    <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+    <%= f.error_notification %>
 
-<%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= f.error_notification %>
+    <div class="form-inputs">
+    <%= f.input :email, required: true, label: false, placeholder: "email", :input_html => { :class => 'brand-input' } %>
+      <%= f.input :password, required: true, label: false, placeholder: "password", :input_html => { :class => 'brand-input' } %>
+      <%= f.input :password_confirmation, required: true, label: false, placeholder: "password confirmation", :input_html => { :class => 'brand-input' } %>
+      <br>
+    </div>
 
-  <div class="form-inputs">
-    <%= f.input :email, required: true, autofocus: true %>
-    <%= f.input :password, required: true, hint: ("#{@minimum_password_length} characters minimum" if @minimum_password_length) %>
-    <%= f.input :password_confirmation, required: true %>
+    <div class="form-actions">
+      <%= f.button :submit, "Sign up", class: "button-no-fill" %>
+    </div>
+    <% end %>
   </div>
 
-  <div class="form-actions">
-    <%= f.button :submit, "Sign up" %>
-  </div>
-<% end %>
-
-<%= render "devise/shared/links" %>
+  <%= render "devise/shared/links" %>
+</div>
