--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,15 @@
-<h1>Pages#home</h1>
-<p>Find me in app/views/pages/home.html.erb</p>
+<div class="page-wrapper">
+  <div class="homepage-wrapper">
+    <h1>MAAAG</h1>
+    <div class="homepage-content">
+      <p>The internet's best curated selection of indie magazines.</p>
+      <br>
+    </div>
+    <div class="homepage-content">
+      <div class="button-no-fill">
+        <%= link_to "START BROWSING", "#" %>
+      </div>
+    </div>
+  </div>
+</div>
+
