--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -1,3 +1,14 @@
 // Import your components CSS files here.
 @import "alert";
 @import "navbar";
+@import "wrapper";
+@import "button";
+@import "form";
+
+a {
+  color: $brand-color;
+  &:hover {
+    text-decoration: none;
+    color: $brand-color;
+  }
+}
