--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -7,4 +7,7 @@ $yellow: #FDB631;
 $orange: #E67E22;
 $green: #32B796;
 $gray: #000000;
-$light-gray: #F4F4F4;
+$light-gray: #FdFdFd;
+
+$brand-color: #616674;
+$brand-color-transparent: rgba(97, 102, 116, 0.2);
