added images to first screen

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -12,4 +12,21 @@
     </div>
   </div>
 </div>
+<div class="page-wrapper">
+  <div class="magcard-row">
+    <div class="magcard" style="background-image: url('<%= image_url(@magazines[0]) %>')"></div>
+    <div class="magcard" style="background-image: url('<%= image_url(@magazines[1]) %>')"></div>
+    <div class="magcard" style="background-image: url('<%= image_url(@magazines[2]) %>')"></div>
+  </div>
+  <div class="magcard-row">
+    <div class="magcard" style="background-image: url('<%= image_url(@magazines[3]) %>')"></div>
+    <div class="magcard" style="background-image: url('<%= image_url(@magazines[4]) %>')"></div>
+    <div class="magcard" style="background-image: url('<%= image_url(@magazines[5]) %>')"></div>
+  </div>
+  <div class="magcard-row">
+    <div class="magcard" style="background-image: url('<%= image_url(@magazines[6]) %>')"></div>
+    <div class="magcard" style="background-image: url('<%= image_url(@magazines[7]) %>')"></div>
+    <div class="magcard" style="background-image: url('<%= image_url(@magazines[8]) %>')"></div>
+  </div>
+</div>
 
