--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -7,7 +7,7 @@
     </div>
     <div class="homepage-content">
       <div class="button-no-fill">
-        <%= link_to "START BROWSING", "#" %>
+      <%= link_to "START BROWSING", new_user_session_path %>
       </div>
     </div>
   </div>
