--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -17,3 +17,15 @@
     transition: 0.4s ease;
   }
 }
+
+  .btn-large {
+    color: #fff;
+  }
+
+  .btn {
+    color: #fff;
+  }
+
+  .width-100 {
+    width: 100%;
+  }
