--- a/app/assets/stylesheets/components/_wrapper.scss
+++ b/app/assets/stylesheets/components/_wrapper.scss
@@ -15,10 +15,9 @@
   height: 100vh;
   .homepage-content {
     width: 195px;
-    text-align: justify;
+    text-align: center;
   }
-}
-
-.form-wrapper {
-
+  .btn-large {
+    color: #fff;
+  }
 }
