--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,8 +1,8 @@
 <div class="page-wrapper">
   <div class="homepage-wrapper">
-    <h1>MAAAG</h1>
+    <h1 class="text-center">MODERN<br>PULP</h1>
     <div class="homepage-content">
-      <p class="text-center">The internet's best curated selection of indie magazines.</p>
+      <p class="text-justify">The internet's best curated selection of indie magazines.</p>
       <br>
     </div>
     <div class="homepage-content">
