--- a/app/assets/stylesheets/components/_magcard.scss
+++ b/app/assets/stylesheets/components/_magcard.scss
@@ -13,3 +13,29 @@
   background-size: cover;
   box-shadow: 0px 4px 20px 0px rgba(97, 102, 116, 0.55);
 }
+
+.issuecard {
+ width: 100vw;
+ max-width: 450px;
+ margin: 18px 0px 50px 0px;
+ box-shadow: 0px 4px 20px 0px rgba(97, 102, 116, 0.55);
+}
+
+h2.issue-feed-header {
+  font-size: 25px;
+  max-width: 450px;
+  text-align: left;
+  width: 100vw;
+  padding: 0px 3px;
+      margin: 30px 0px 2px 0px;
+}
+
+p.issue-feed-text {
+  max-width: 450px;
+  text-align: left;
+  width: 100vw;
+  padding: 0px 3px;
+  margin: 0;
+  text-transform: uppercase;
+  font-size: 16px;
+}
