added a bunch of functionality, shippable. still need to figure out seeds or admin panel

--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -1,5 +1,6 @@
 // Import your components CSS files here.
 @import "alert";
+@import "content_items";
 @import "navbar";
 @import "wrapper";
 @import "button";
