--- a/app/views/issues/index.html.erb
+++ b/app/views/issues/index.html.erb
@@ -13,7 +13,7 @@
 
   <div class="issue-feed-wrapper">
     <% @issues.each do |issue| %>
-    <h2 class="issue-feed-header"><%= issue.magazine %> <%= issue.title %></h2>
+    <h2 class="issue-feed-header"><%= issue.title %></h2>
     <p class="issue-feed-text">BY <%= issue.magazine %></p>
     <%= link_to issue_path(issue) do %>
       <%= cl_image_tag issue.photo, class: "issuecard" %>
