--- a/app/assets/stylesheets/components/_magcard.scss
+++ b/app/assets/stylesheets/components/_magcard.scss
@@ -21,13 +21,35 @@
  box-shadow: 0px 4px 20px 0px rgba(97, 102, 116, 0.55);
 }
 
+.contentcard {
+ width: 100vw;
+ max-width: 450px;
+ margin: 18px 0px 25px 0px;
+ // box-shadow: 0px 4px 20px 0px rgba(97, 102, 116, 0.55);
+}
+
+.content-image {
+  width: 100%;
+  height: 100%;
+}
+
 h2.issue-feed-header {
   font-size: 25px;
   max-width: 450px;
   text-align: left;
   width: 100vw;
   padding: 0px 3px;
-      margin: 30px 0px 2px 0px;
+  margin: 30px 0px 2px 0px;
+}
+
+p.content-feed-text {
+  max-width: 450px;
+  text-align: left;
+  width: 100vw;
+  padding: 0px 3px;
+  margin: 0;
+  font-size: 16px;
+  line-height: 30px;
 }
 
 p.issue-feed-text {
@@ -39,3 +61,15 @@ p.issue-feed-text {
   text-transform: uppercase;
   font-size: 16px;
 }
+
+p.issue-feed-link {
+  max-width: 450px;
+  text-align: left;
+  width: 100vw;
+  text-transform: uppercase;
+  font-size: 16px;
+  margin-top: 70px;
+  color: $brand-color;
+}
+
+
